merge: integrate 22 submissions — 10 new files/sections, 10 IDs assigned to existing entries
New files: intellij-platform/rename-refactoring.md (GE-0079-0081),
intellij-platform/indexing.md (GE-0093), tools/html2text.md (GE-0082-0083, 0088-0090)

Appended to: tools/tmux.md (GE-0074-0075), tools/playwright.md (GE-0084-0085, 0087, 0092),
tools/regex.md (GE-0086), tools/claude-code.md (GE-0091), quarkus/config.md (GE-0076),
quarkus/webauthn.md (GE-0077-0078), quarkus/testing.md (GE-0094-0095)

IDs assigned to existing ID-less entries: GE-0096-0100 (tmux.md),
GE-0101-0103 (playwright.md), GE-0104 (webauthn.md)